feat: updated core

--- a/bukkit/src/main/resources/messages_en.properties
+++ b/bukkit/src/main/resources/messages_en.properties
@@ -1,9 +1,27 @@
-# Message
-message.player_only=&cThis command can only be executed by a player.
-message.no_permission=&cYou do not have permission to use this command.
+### Message ###
+
+# Command
+message.command.player_only=&cThis command can only be executed by a player.
+message.command.no_permission=&cYou do not have permission to use this command.
 
 # GUI
+message.gui.report.submitted=&aThanks for you {0} report. We understand your concern, and it will be reviewed as soon as possible.
+message.gui.report.cancelled=&cYou've closed your report!
+
+# Moderation
+message.moderation.notify.reported=&c{0} &4has been reported for &c{1}&4.
+
+### GUI ###
+
+# Report
 gui.report.title=&8Report
 gui.report.button.head=&7/report &r&b{0}
 gui.report.button.cheating.title=&aCheating (Hacking)
 gui.report.button.cheating.lore=&7Using disallowed modifications to gain;&7an unfair advantage.; ;&eClick to select.
+
+# Report Confirmation
+gui.report.confirm.title=&8Report Confirmation
+gui.report.confirm.button.head.title=&7/report &r&b{0}
+gui.report.confirm.button.head.lore= ;&eReport {0} for {1}
+gui.report.confirm.button.submit=&aSubmit Report
+gui.report.confirm.button.cancel=&cCancel Report
