feat: added report msg and updated core

--- a/bukkit/src/main/resources/messages_en.properties
+++ b/bukkit/src/main/resources/messages_en.properties
@@ -1,12 +1,14 @@
 ### Message ###
 
 # Command
-message.command.player_only=&cThis command can only be executed by a player.
-message.command.no_permission=&cYou do not have permission to use this command.
+message.command.player-only=&cThis command can only be executed by a player.
+message.command.no-permission=&cYou do not have permission to use this command.
+message.command.usage=&cUsage: {0}
+message.command.player-not-found=&cPlease specify a valid player.
 
 # GUI
 message.gui.report.submitted=&aThanks for you {0} report. We understand your concern, and it will be reviewed as soon as possible.
-message.gui.report.cancelled=&cYou've closed your report!
+message.gui.report.cancelled=&cYou have closed your report!
 
 # Moderation
 message.moderation.notify.reported=&c{0} &4has been reported for &c{1}&4.
@@ -18,6 +20,24 @@ gui.report.title=&8Report
 gui.report.button.head=&7/report &r&b{0}
 gui.report.button.cheating.title=&aCheating (Hacking)
 gui.report.button.cheating.lore=&7Using disallowed modifications to gain;&7an unfair advantage.; ;&eClick to select.
+gui.report.button.bad-name.title=&aBad Name
+gui.report.button.bad-name.lore=&7Having an inappropriate username.; ;&eClick to select.
+gui.report.button.bad-skin.title=&aBad Skin/Cape
+gui.report.button.bad-skin.lore=&7Having an inappropriate skin/cape.; ;&eClick to select.
+gui.report.button.cross-teaming.title=&aCross Teaming
+gui.report.button.cross-teaming.lore=&7Working with the other team to gain;&7an advantage.; ;&eClick to select.
+gui.report.button.message.title=&aMessage Abuse/Scam
+gui.report.button.message.lore=&7Using offensive chat, scamming, or;&7engaging in abusive chat behavior.; ;&eClick to select.
+
+
+# Report Message
+gui.report.message.title=&8Report Message
+gui.report.message.button.head=&7/report &r&b{0}
+gui.report.message.button.public.title=&aPublic Chat
+gui.report.message.button.public.lore=&7Click to report for Public Chat; ;&eClick to select.
+gui.report.message.button.private.title=&aDirect Message
+gui.report.message.button.private.lore=&7Click to report for Direct Message; ;&eClick to select.
+gui.report.message.button.back.title=&cBack
 
 # Report Confirmation
 gui.report.confirm.title=&8Report Confirmation
